# poetry-flask-template

./: .flake8  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  run-dev.sh
.github/: CONTRIBUTING.md
.github/workflows/: pull-request-validator.yml
.github/workflows/actions/: linter.yml
.github/workflows/linters/: .flake8
tests/: poetry_flask_template_test.py  test_poetry_flask_template.py
